--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "axios": "^1.4.0",
     "modern-normalize": "^1.1.0",
-    "@swc/helpers"
+    "@swc/helpers": "0.5.1"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
