--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "modern-normalize": "^1.1.0",
-    "@swc/helpers": "0.5.1"
+    "@swc/helpers": "0.5.1",
+    "regenerator-runtime": "0.14.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
