--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
+    "@swc/helpers": "0.5.1",
     "axios": "^1.4.0",
     "modern-normalize": "^1.1.0",
-    "@swc/helpers": "0.5.1",
-    "regenerator-runtime": "0.14.0"
+    "notiflix": "^3.2.6",
+    "regenerator-runtime": "0.14.0",
+    "slim-select": "^2.6.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
